(rule
 (with-stdout-to
  dune-cache-daemon.1
  (run %{bin:dune-cache-daemon} --help=groff)))

(install
 (section man)
 (files dune-cache-daemon.1))

(include dune-cache-daemon.inc)

(rule
 (alias runtest)
 (mode promote)
 (action
  (with-stdout-to
   dune-cache-daemon.inc
   (run bash %{dep:update-man.sh} %{bin:dune-cache-daemon}))))
